--- a/flask/free_wheels/ibge.html
+++ b/flask/free_wheels/ibge.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="home">
 
-  {% include pt/step-header.html %}
+  {% include pt/step-header-ibge.html %}
 
   {% include pt/step-about.html %}
 
